--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,8 @@
     "react-redux": "^5.0.4",
     "react-router": "^3.0.5",
     "redux": "^3.6.0",
+    "redux-persist": "^4.8.0",
+    "redux-persist-cookie-storage": "^0.3.0",
     "redux-thunk": "^2.2.0"
   },
   "devDependencies": {
